tests/failing/checker/mut_static.ri
static mut MUTABLE_STATIC: i32 = 3;

fn main() void {
    let x = MUTABLE_STATIC;
}
